# FlashOCR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: flashocr_m05x.yaml  flashocr_m15x.yaml  flashocr_m_coco.yaml  flashocr_m_kd.yaml  flashocr_m_lora.yaml
docker/: Dockerfile  docker-compose.yml
docs/: FAQ.md  Home.md  Installation.md  LoRA-Fine-Tuning.md  Models.md  Quick-Start.md  Training.md
examples/: benchmark_model.py  export_onnx.py  predict_text.py  train_custom_dataset.py  train_with_lora.py
flashocr/: __init__.py  cli.py  registry.py
flashocr/analytics/: __init__.py  benchmark.py  plots.py  profiler.py
flashocr/cfg/: __init__.py  config.py
flashocr/data/: __init__.py  dataloader.py  dataset.py  prepare.py  transforms.py
flashocr/document/: __init__.py  layout_analyzer.py  pdf_processor.py  table_extractor.py
flashocr/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py  validator.py
flashocr/losses/: __init__.py  attention_loss.py  ctc_loss.py  kd_loss.py
flashocr/models/: __init__.py  lora.py  recognizer.py
flashocr/models/backbone/: shufflenet.py
flashocr/models/decoder/: __init__.py  attention_decoder.py  ctc_decoder.py
flashocr/models/encoder/: __init__.py  cnn_encoder.py
flashocr/models/recognition/: __init__.py  multilingual.py  trocr.py
flashocr/nn/: __init__.py
flashocr/solutions/: __init__.py  document_scanner.py  plate_reader.py  receipt_parser.py
flashocr/utils/: __init__.py  checkpoint.py  logger.py  metrics.py  visualization.py
tests/: test_callbacks.py  test_comprehensive.py  test_document.py  test_models.py  test_registry.py  test_trocr.py
